--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 Copyright notice
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An interesting title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			C O N T E N T
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; RafaBOB 2014</p>
 	</footer>
 </body>
 </html>
