fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 
 <!-- 
 Copyright notice
-some silly changes from master branch
+CHANGES 
 -->
 <head>
 	<title>An interesting title</title>
@@ -17,13 +17,13 @@ some silly changes from master branch
 </head>
 <body>
 	<main class="container">
-	<!-- junk filler -->
+	<!-- Content Goes Here -->
 		<p>
 			temporary
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; yes 2014</p>
+		<p>&copy; RafaBOB 2014</p>
 	</footer>
 </body>
 </html>
