--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 
 <!-- 
 Copyright notice
-adding changes before rebasing conflicts
+some silly changes from master branch
 -->
 <head>
 	<title>An interesting title</title>
@@ -17,14 +17,13 @@ adding changes before rebasing conflicts
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- junk filler -->
 		<p>
-			Conflicting content
-			interesting
+			temporary
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; RafaBOB 2014</p>
+		<p>&copy; yes 2014</p>
 	</footer>
 </body>
 </html>
