adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -2,10 +2,9 @@
 
 <!-- 
 Copyright notice
-CHANGES 
 -->
 <head>
-	<title>An interesting title</title>
+	<title>An interesting title, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
