local: updating simple.html copyright

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@ Copyright notice
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; RafaBOB 2014</p>
+		<p>&copy; RafaBOB 2014, new update</p>
 	</footer>
 </body>
 </html>
