Done with simple.html updates]

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 Copyright notice
 -->
 <head>
-	<title>An interesting title, in a little repo</title>
+	<title>Updating the title for Stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@ Copyright notice
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			temporary
+			more important content
 		</p>
 	</main>
 	<footer class="container">
