Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 Copyright notice
 -->
 <head>
-	<title>Updating the title for Stash Branch example</title>
+	<title>Updating the title for tagging compare example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
